--- a/Mini_project _sql/sql.ipynb
+++ b/Mini_project _sql/sql.ipynb
@@ -9,10 +9,10 @@
     "import psycopg2\n",
     "import pandas as pd\n",
     "\n",
-    "connector = psycopg2.connect(host =\"127.0.0.1\",\n",
+    "connector = psycopg2.connect(host =\"\",\n",
     "                            user =\"postgres\",\n",
-    "                            port = \"5432\",\n",
-    "                            password = \"eaas2015\",\n",
+    "                            port = \"\",\n",
+    "                            password = \"\",\n",
     "                            database = \"E-commerce project\" )"
    ]
   },
